# AuctionService2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
AuctionServiceClient/: README.md
AuctionServiceClient/src/: index.html  vercel.json
AuctionServiceClient/src/api/proxy/: route.js
include/auction/api/: routes.h
include/auction/core/: auth_service.h  database.h  http_client.h  service_registry.h  token_cache.h
include/auction/model/: lot.h
include/auction/repository/: lot_repository.h
include/auction/service/: lot_service.h
src/: main.cpp
src/api/: routes.cpp
src/core/: auth_service.cpp  database.cpp  http_client.cpp  service_registry.cpp  token_cache.cpp
src/model/: lot.cpp
src/repository/: lot_repository.cpp
src/service/: lot_service.cpp
